# AdaptableCommunicationSystemPoC

./: LICENSE  README.md
acsgw/: CMakeLists.txt  Doxyfile  acsgw.cfg  main.cc  rebuild.sh  run.sh
acsgw/config/: ConfigParser.cc
acsgw/include/: GlobalDefs.h
acsgw/include/config/: Config.h
acsgw/include/net/: IpAddress.h  RouteMgr.h
acsgw/include/net/filter/: IpPacketParser.h
acsgw/include/net/socket/: GreSocket.h  TcpListener.h  TcpSocket.h  TransportSocket.h
acsgw/include/net/tunnel/: MpTunnel.h  TcpConnectionMgr.h  TunTap.h  TunnelBuilder.h  VirtualIfMgr.h
acsgw/include/sip/: SipClient.h  SipHeader.h  SipHeaderParser.h  SipParsedMessage.h  SipResponse.h  SipServer.h  SipSocket.h
acsgw/include/utils/: Gtp.h  LockedQueue.h  LogicalIpAddrMgr.h  TextTokenizer.h  Token.h  TokenList.h  Tools.h
acsgw/net/: RouteMgr.cc
acsgw/net/filter/: Ip4DupDetector.cc
acsgw/net/socket/: GreSocket.cc  TcpListener.cc  TcpSocket.cc  TransportSocket.cc  UdpSocket.cc
acsgw/net/tunnel/: TcpConnectionMgr.cc  TunTap.cc  TunnelBuilder.cc  TunnelMgr.cc  VirtualIfMgr.cc
acsgw/scripts/: cleanup.sh  invite_server_agent.sh  iperf_client.sh  iperf_server.sh  kill_other_instances.sh  register_server_agent.sh  register_user_agent.sh  rmloss.sh  setdelay.sh  setloss.sh
acsgw/sip/: SipClient.cc  SipHeader.cc  SipHeaderParser.cc  SipParsedMessage.cc  SipResponse.cc  SipServer.cc  SipSocket.cc
acsgw/utils/: Logger.cc  TokenList.cc  Tools.cc
udptremu/: CMakeLists.txt  build.sh  main.cc
udptremu/config/: Config.cc
udptremu/include/config/: ConfigParser.h
udptremu/include/net/: MacAddress.h
udptremu/include/net/socket/: UdpSocket.h
udptremu/include/utils/: Exception.h  Logger.h  StringTool.h  SyntaxError.h  Terminal.h  Tokenizer.h  Tools.h
udptremu/net/socket/: UdpSocket.cc
udptremu/utils/: LogicalIpAddrMgr.cc  StringTool.cc  SyntaxError.cc  TextTokenizer.cc  Token.cc
